managedscheduledapex-app/objects/Scheduled_Apex__mdt/Scheduled_Apex__mdt.object-meta.xml
<CustomObject>
    <description>List of tasks and respective times to run in the Daily Scheduler</description>
    <label>Scheduled Apex</label>
    <pluralLabel>Scheduled Apex Entries</pluralLabel>
</CustomObject>