managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked to indicate the job should be run. Do not mark entries that are only used for sorting as active.</description>
    <inlineHelpText>Checked to indicate the job should be run. Do not mark entries that are only used for sorting as active.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>