managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>This is the name of the class that will be added to the batchable queue. Usually this is the same as the Name field, but not always...</description>
    <inlineHelpText>This is the name of the class that will be added to the batchable queue. Usually this is the same as the Name field, but not always...</inlineHelpText>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>