managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/CronSchedule__c.field-meta.xml
<CustomField>
    <fullName>CronSchedule__c</fullName>
    <defaultValue>&apos;Auto Generated&apos;</defaultValue>
    <description>This is a short summary of the schedule.</description>
    <inlineHelpText>Minutes Hours DayOfMonth Month DayOfWeek Year</inlineHelpText>
    <label>Cron Schedule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>