managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/DayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DayOfMonth__c</fullName>
    <defaultValue>&apos;*&apos;</defaultValue>
    <description>Day of month formatted like a crontab entry.  Comma separated values, with a * and ? as wildcard.</description>
    <inlineHelpText>Day of month formatted like a crontab entry.  Comma separated values, with a * and ? as wildcard.  e.g. The first week of the month is 1-7.</inlineHelpText>
    <label>Day of Month</label>
    <length>32</length>
    <type>Text</type>
</CustomField>