managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <defaultValue>&apos;?&apos;</defaultValue>
    <description>Day of Week formatted like a crontab entry.  Comma separated values, with a * and ? as wildcards.  1 is Monday, 7 is Sunday, you may use the first three letters instead of a number.</description>
    <inlineHelpText>Day of week formatted like a crontab entry.  Comma separated values, with a * and ? as wildcards.  1 is Sunday, 7 is Saturday. You may use the first three letters instead of a number.  e.g. SUN-SAT</inlineHelpText>
    <label>Day of Week</label>
    <length>28</length>
    <type>Text</type>
</CustomField>