managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <defaultValue>&apos;-&apos;</defaultValue>
    <description>Hour formatted like a crontab entry.  Comma separated values, with a * as wildcard, and - meaning none.</description>
    <inlineHelpText>Hour formatted like a crontab entry.  Comma separated values, with a * as wildcard, and - meaning none.  The last 12 hours of the day are 12-23.</inlineHelpText>
    <label>Hour</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>