managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <inlineHelpText>The name used when when scheduling the salesforce job.  The default value &quot;ApexScheduler&quot; will be used if not specified.</inlineHelpText>
    <label>Job Name</label>
    <length>77</length>
    <type>Text</type>
</CustomField>