managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/JSON_Checksum__c.field-meta.xml
<CustomField>
    <fullName>JSON_Checksum__c</fullName>
    <description>When you update the json there is a test deserialization.  At the sametime a checksum will be created to indicate this has been done.</description>
    <inlineHelpText>When you update the json there is a test deserialization.  At the sametime a checksum will be created to indicate this has been done.  If the deserialization fails the job will be marked inactive and the error message will be shown instead.</inlineHelpText>
    <label>JSON Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>