managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/JSON_Constructor__c.field-meta.xml
<CustomField>
    <fullName>JSON_Constructor__c</fullName>
    <defaultValue>&apos;{}&apos;</defaultValue>
    <description>Populate to define how to construct the object, from the specified class. If not populated newInstance will be used instead of json.</description>
    <inlineHelpText>Populate to define how to construct the object, from the specified class.  If not populated newInstance will be used instead of json.</inlineHelpText>
    <label>JSON Constructor</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>