managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <defaultValue>&apos;*&apos;</defaultValue>
    <description>The month ranges in which the job should invoke.</description>
    <inlineHelpText>Set to a range of the month like 1,6,9-12. A * may be used as a wildcard. You may use the first three letters instead of a number.  e.g. JAN,JUN,SEP-DEC</inlineHelpText>
    <label>Month</label>
    <length>60</length>
    <type>Text</type>
</CustomField>