managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/MustRun__c.field-meta.xml
<CustomField>
    <fullName>MustRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then if the job is skipped due to higher priority jobs, we will keep trying to queue the job until a position is available.</description>
    <inlineHelpText>If checked, then if the job is skipped due to higher priority jobs, we will keep trying to queue the job until a position is available.</inlineHelpText>
    <label>Must Run</label>
    <type>Checkbox</type>
</CustomField>