managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>NamespacePrefix__c</fullName>
    <description>Class namespace prefix</description>
    <inlineHelpText>Class nanmspace prefix</inlineHelpText>
    <label>Class Namespace Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>