managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>How many records are processed per batch?</description>
    <inlineHelpText>How many records are processed per batch? (2000 maximum)
Data Owner</inlineHelpText>
    <label>Scope</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>