managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/SkipTestClass__c.field-meta.xml
<CustomField>
    <fullName>SkipTestClass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this if your class will fail to construct using a JSON deserialize call.</description>
    <label>Skip Test Class</label>
    <type>Checkbox</type>
</CustomField>