managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Task_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Name__c</fullName>
    <defaultValue>$User.FirstName+&apos; &apos;+$User.LastName</defaultValue>
    <inlineHelpText>This value will be auto populated.</inlineHelpText>
    <label>Task Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>