managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Task_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Task_OwnerId__c</fullName>
    <defaultValue>CASESAFEID($User.Id)</defaultValue>
    <description>Populate the raw salesforce id here.</description>
    <inlineHelpText>Populate the raw salesforce id here.</inlineHelpText>
    <label>Task Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>