managedscheduledapex-app/objects/Scheduled_Apex__mdt/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>&apos;*&apos;</defaultValue>
    <inlineHelpText>Set to a range of years like 2022,2030-2045. A * may be used as a wildcard.</inlineHelpText>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>