managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Check_Inactive_Hour.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Inactive_Hour</fullName>
    <active>false</active>
    <description>Check that an inactive job is not scheduled.</description>
    <errorConditionFormula>AND(NOT(Active__c),Hour__c!=&apos;-&apos;)</errorConditionFormula>
    <errorDisplayField>Hour__c</errorDisplayField>
    <errorMessage>Must be - when a job is inactive.</errorMessage>
</ValidationRule>