managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/DayOfMonth_OutOfBoundsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DayOfMonth_OutOfBoundsCheck</fullName>
    <active>true</active>
    <description>Check that no day of month value is greater than 31.</description>
    <errorConditionFormula>AND(Active__c,REGEX(DayOfMonth__c,&apos;3[2-9]|[4-9][0-9]|[0-9][0-9][0-9]&apos;))</errorConditionFormula>
    <errorDisplayField>DayOfMonth__c</errorDisplayField>
    <errorMessage>No value in the range can be greater than 31.</errorMessage>
</ValidationRule>