managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/DayOfWeek_is_a_range.validationRule-meta.xml
<ValidationRule>
    <fullName>DayOfWeek_is_a_range</fullName>
    <active>true</active>
    <description>Check that day of week is a range of values</description>
    <errorConditionFormula>AND(Active__c,
NOT(REGEX(BLANKVALUE(DayOfWeek__c,&apos;?&apos;),&apos;^([?*]|([*]/[0-9]+)|(([a-zA-Z0-9]+(-[a-zA-Z0-9]+)?(/[0-9]+)?,)*[a-zA-Z0-9]+(-[a-zA-Z0-9]+)?(/[0-9]+)?))$&apos;)))</errorConditionFormula>
    <errorDisplayField>DayOfWeek__c</errorDisplayField>
    <errorMessage>Must be &apos;*&apos;,&apos;?&apos;, or a comma separated range of numbers the form 1-3,6-7.  You may also use / to indicate increment.  e.g. 1/2 is the same as 1,3,5,7</errorMessage>
</ValidationRule>