managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/DayOfWeek_OutOfBoundsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DayOfWeek_OutOfBoundsCheck</fullName>
    <active>true</active>
    <description>Check that no day of week is less than 1 or greater than 7.</description>
    <errorConditionFormula>AND(Active__c,REGEX(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(UPPER(DayOfWeek__c),
&apos;SUN&apos;,&apos;1&apos;),
&apos;MON&apos;,&apos;2&apos;),
&apos;TUE&apos;,&apos;3&apos;),
&apos;WED&apos;,&apos;4&apos;),
&apos;THU&apos;,&apos;5&apos;),
&apos;FRI&apos;,&apos;6&apos;),
&apos;SAT&apos;,&apos;7&apos;),
&apos;[089A-Z]|[1-7][1-7]&apos;))</errorConditionFormula>
    <errorDisplayField>DayOfWeek__c</errorDisplayField>
    <errorMessage>No value in the range can be less than 1 or greater than 7.</errorMessage>
</ValidationRule>