managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Hour_is_a_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Hour_is_a_range</fullName>
    <active>true</active>
    <description>Check that hour is a range of values</description>
    <errorConditionFormula>AND(Active__c,
NOT(REGEX(Hour__c,&apos;^(([*](/[0-9]+)?)|(([0-9]+(-[0-9]+)?(/[0-9]+)?,)*[0-9]+(-[0-9]+)?(/[0-9]+)?))$&apos;)))</errorConditionFormula>
    <errorDisplayField>Hour__c</errorDisplayField>
    <errorMessage>Must be a &apos;*&apos; or a comma separated range of numbers the form 0-9,11,15,17-19.  You may also use / to indicate increment.  e.g. 7/8 is the same as 7,15,23</errorMessage>
</ValidationRule>