managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Minute_is_a_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Minute_is_a_range</fullName>
    <active>true</active>
    <description>Check that minute is a range of values</description>
    <errorConditionFormula>AND(Active__c,
NOT(REGEX(Minute__c,&apos;^(([*](/[0-9]+)?)|(([0-9]+(-[0-9]+)?(/[0-9]+)?,)*[0-9]+(-[0-9]+)?(/[0-9]+)?))$&apos;)))</errorConditionFormula>
    <errorDisplayField>Minute__c</errorDisplayField>
    <errorMessage>Must be a &apos;*&apos; or a comma separated range of numbers the form 0-9,11,15,17-19.  You may also use / to indicate increment.  e.g. 2/20 is the same as 2,22,42.</errorMessage>
</ValidationRule>