managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Month_is_a_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Month_is_a_range</fullName>
    <active>true</active>
    <description>Check that month is a range of values</description>
    <errorConditionFormula>AND(Active__c,
NOT(REGEX(BlANKVALUE(Month__c,&apos;*&apos;),&apos;^(([*](/[0-9]+)?)|(([a-zA-Z0-9]+(-[a-zA-Z0-9]+)?(/[0-9]+)?,)*[a-zA-Z0-9]+(-[a-zA-Z0-9]+)?(/[0-9]+)?))$&apos;)))</errorConditionFormula>
    <errorDisplayField>Month__c</errorDisplayField>
    <errorMessage>Must be a &apos;*&apos; or a comma separated range of numbers the form 0-5,8-10,12.  You may also use / to indicate increment.  e.g. 2/5 is the same as 2,7,12.</errorMessage>
</ValidationRule>