managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Month_OutOfBoundsCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Month_OutOfBoundsCheck</fullName>
    <active>true</active>
    <description>Check that no month is less than 1 or greater than 12.</description>
    <errorConditionFormula>AND(Active__c,REGEX(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
&apos;,&apos;+UPPER(Month__c)+&apos;,&apos;,
&apos;JAN&apos;,&apos;1&apos;),
&apos;FEB&apos;,&apos;2&apos;),
&apos;MAR&apos;,&apos;3&apos;),
&apos;APR&apos;,&apos;4&apos;),
&apos;MAY&apos;,&apos;5&apos;),
&apos;JUN&apos;,&apos;6&apos;),
&apos;JUL&apos;,&apos;7&apos;),
&apos;AUG&apos;,&apos;8&apos;),
&apos;SEP&apos;,&apos;9&apos;),
&apos;OCT&apos;,&apos;10&apos;),
&apos;NOV&apos;,&apos;11&apos;),
&apos;DEC&apos;,&apos;12&apos;),
&apos;[A-Z]|[02-9][0-9]|1[3-9]|[0-9][0-9][0-9]|[^0-9]0[^0-9]&apos;))</errorConditionFormula>
    <errorDisplayField>Month__c</errorDisplayField>
    <errorMessage>No value in the range can be less than 1 or greater than 12.</errorMessage>
</ValidationRule>