managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/No_hour_greater_than_23.validationRule-meta.xml
<ValidationRule>
    <fullName>No_hour_greater_than_23</fullName>
    <active>true</active>
    <description>Check that no hour value is greater than 23.</description>
    <errorConditionFormula>AND(Active__c,REGEX(Hour__c,&apos;2[4-9]|[3-9][0-9]|[0-9][0-9][0-9]&apos;))</errorConditionFormula>
    <errorDisplayField>Hour__c</errorDisplayField>
    <errorMessage>No value in the range can be greater than 23.</errorMessage>
</ValidationRule>