managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/No_minute_greater_than_59.validationRule-meta.xml
<ValidationRule>
    <fullName>No_minute_greater_than_59</fullName>
    <active>true</active>
    <description>Check that no minute value is greater than 59.</description>
    <errorConditionFormula>AND(Active__c,REGEX(Hour__c,&apos;[6-9][0-9]|[0-9][0-9][0-9]&apos;))</errorConditionFormula>
    <errorDisplayField>Minute__c</errorDisplayField>
    <errorMessage>No value in the range can be greater than 59.</errorMessage>
</ValidationRule>