managedscheduledapex-app/objects/Scheduled_Apex__mdt/validationRules/Year_is_a_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_is_a_range</fullName>
    <active>true</active>
    <description>Check that year is a range of values</description>
    <errorConditionFormula>AND(Active__c,
NOT(REGEX(BLANKVALUE(Year__c,&apos;*&apos;),&apos;^(([*](/[0-9]+)?)|(([0-9]+(-[0-9]+)?(/[0-9]+)?,)*[0-9]+(-[0-9]+)?(/[0-9]+)?))$&apos;)))</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Must be a &apos;*&apos; or a comma separated range of numbers the form 2020,2022-2024,2030.  You may also use / to indicate increment.  e.g. 2020/4 is the same as 2020,2024,..</errorMessage>
</ValidationRule>