managedscheduledapex-app/objects/Scheduled_Apex__mdt/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>MasterLabel</columns>
    <columns>JobName__c</columns>
    <columns>Priority__c</columns>
    <columns>MustRun__c</columns>
    <columns>Scope__c</columns>
    <columns>CronSchedule__c</columns>
    <columns>Task_Owner_Name__c</columns>
    <columns>NamespacePrefix__c</columns>
    <columns>ClassName__c</columns>
    <columns>JSON_Constructor__c</columns>
    <columns>SkipTestClass__c</columns>
    <columns>JSON_Checksum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive</label>
    <language>en_US</language>
</ListView>