managedscheduledapex-app/objects/Scheduled_Apex__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>JobName__c</columns>
    <columns>Active__c</columns>
    <columns>Priority__c</columns>
    <columns>MustRun__c</columns>
    <columns>Scope__c</columns>
    <columns>CronSchedule__c</columns>
    <columns>NamespacePrefix__c</columns>
    <columns>ClassName__c</columns>
    <columns>Task_Owner_Name__c</columns>
    <columns>JSON_Constructor__c</columns>
    <columns>SkipTestClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
    <language>en_US</language>
</ListView>